option(
  'bitbridge',
  type : 'boolean',
  value : false,
  description : 'Build a 32-bit host application for hosting 32-bit plugins. See the readme for full instructions on how to use this.'
)

option(
  'system-asio',
  type : 'boolean',
  value : false,
  description : '''If set to true, then <asio.hpp> from the standard include
                   directories will be used in place of a pkgconfig definition,
                   CMake dependency, or subproject wrap. The asio library does
                   not come with any build definitions Meson can use to detect
                   its installed version and location, so this behavior is
                   behind an option as it's only relevant for distro packaging.'''
)

option(
  'vst3',
  type : 'boolean',
  value : true,
  description : 'Whether to build the VST3 version of yabridge.'
)

option(
  'winedbg',
  type : 'boolean',
  value : false,
  description : 'Whether to run the Wine VST host with GDB attached. Might not always be reliable.'
)
