# Like for the other libraries, the actual `shared_library()` call is in the
# main `meson.build` file so everything gets bundled to a single directory.

vst2_chainloader_sources = files(
  'vst2-chainloader.cpp',
  '../common/linking.cpp',
  '../common/notifications.cpp',
  '../common/process.cpp',
)

vst3_chainloader_sources = files(
  'vst3-chainloader.cpp',
  '../common/linking.cpp',
  '../common/notifications.cpp',
  '../common/process.cpp',
)
