# We only define the sources here, because calling `shared_library()` here will
# cause the `libyabridge-*.so` files to be generated in a deeply nested
# subdirectory of `build/`

vst2_plugin_deps = [
  configuration_dep,

  asio_dep,
  bitsery_dep,
  dl_dep,
  ghc_filesystem_dep,
  rt_dep,
  threads_dep,
  tomlplusplus_dep,
]

if with_clap
  clap_plugin_deps = [
    configuration_dep,

    asio_dep,
    bitsery_dep,
    clap_dep,
    dl_dep,
    function2_dep,
    ghc_filesystem_dep,
    rt_dep,
    threads_dep,
    tomlplusplus_dep,
  ]
endif

if with_vst3
  vst3_plugin_deps = [
    configuration_dep,

    asio_dep,
    bitsery_dep,
    dl_dep,
    function2_dep,
    ghc_filesystem_dep,
    rt_dep,
    threads_dep,
    tomlplusplus_dep,
    vst3_sdk_native_dep,
  ]
endif

vst2_plugin_sources = files(
  '../common/communication/common.cpp',
  '../common/communication/vst2.cpp',
  '../common/serialization/vst2.cpp',
  '../common/configuration.cpp',
  '../common/logging/common.cpp',
  '../common/logging/vst2.cpp',
  '../common/audio-shm.cpp',
  '../common/linking.cpp',
  '../common/notifications.cpp',
  '../common/plugins.cpp',
  '../common/process.cpp',
  '../common/utils.cpp',
  '../include/llvm/small-vector.cpp',
  'bridges/vst2.cpp',
  'host-process.cpp',
  'utils.cpp',
  'vst2-plugin.cpp',
)

if with_clap
  clap_plugin_sources = files(
    '../common/communication/common.cpp',
    '../common/configuration.cpp',
    '../common/logging/clap.cpp',
    '../common/logging/common.cpp',
    '../common/audio-shm.cpp',
    '../common/linking.cpp',
    '../common/notifications.cpp',
    '../common/plugins.cpp',
    '../common/process.cpp',
    '../common/serialization/clap/ext/audio-ports.cpp',
    '../common/serialization/clap/ext/note-ports.cpp',
    '../common/serialization/clap/ext/params.cpp',
    '../common/serialization/clap/host.cpp',
    '../common/serialization/clap/plugin.cpp',
    '../common/utils.cpp',
    '../include/llvm/small-vector.cpp',
    'bridges/clap-impls/plugin-proxy.cpp',
    'bridges/clap-impls/plugin-factory-proxy.cpp',
    'bridges/clap.cpp',
    'host-process.cpp',
    'utils.cpp',
    'clap-plugin.cpp',
  )
endif

if with_vst3
  vst3_plugin_sources = files(
    '../common/communication/common.cpp',
    '../common/logging/common.cpp',
    '../common/logging/vst3.cpp',
    '../common/serialization/vst3/component-handler/component-handler.cpp',
    '../common/serialization/vst3/component-handler/component-handler-2.cpp',
    '../common/serialization/vst3/component-handler/component-handler-3.cpp',
    '../common/serialization/vst3/component-handler/component-handler-bus-activation.cpp',
    '../common/serialization/vst3/component-handler/progress.cpp',
    '../common/serialization/vst3/component-handler/unit-handler.cpp',
    '../common/serialization/vst3/component-handler/unit-handler-2.cpp',
    '../common/serialization/vst3/context-menu/context-menu.cpp',
    '../common/serialization/vst3/host-context/host-application.cpp',
    '../common/serialization/vst3/host-context/plug-interface-support.cpp',
    '../common/serialization/vst3/plug-view/parameter-finder.cpp',
    '../common/serialization/vst3/plug-view/plug-view.cpp',
    '../common/serialization/vst3/plug-view/plug-view-content-scale-support.cpp',
    '../common/serialization/vst3/plug-frame/plug-frame.cpp',
    '../common/serialization/vst3/plugin/audio-presentation-latency.cpp',
    '../common/serialization/vst3/plugin/audio-processor.cpp',
    '../common/serialization/vst3/plugin/automation-state.cpp',
    '../common/serialization/vst3/plugin/component.cpp',
    '../common/serialization/vst3/plugin/connection-point.cpp',
    '../common/serialization/vst3/plugin/edit-controller.cpp',
    '../common/serialization/vst3/plugin/edit-controller-2.cpp',
    '../common/serialization/vst3/plugin/edit-controller-host-editing.cpp',
    '../common/serialization/vst3/plugin/info-listener.cpp',
    '../common/serialization/vst3/plugin/keyswitch-controller.cpp',
    '../common/serialization/vst3/plugin/midi-learn.cpp',
    '../common/serialization/vst3/plugin/midi-mapping.cpp',
    '../common/serialization/vst3/plugin/note-expression-controller.cpp',
    '../common/serialization/vst3/plugin/note-expression-physical-ui-mapping.cpp',
    '../common/serialization/vst3/plugin/parameter-function-name.cpp',
    '../common/serialization/vst3/plugin/plugin-base.cpp',
    '../common/serialization/vst3/plugin/prefetchable-support.cpp',
    '../common/serialization/vst3/plugin/process-context-requirements.cpp',
    '../common/serialization/vst3/plugin/program-list-data.cpp',
    '../common/serialization/vst3/plugin/unit-data.cpp',
    '../common/serialization/vst3/plugin/unit-info.cpp',
    '../common/serialization/vst3/plugin/xml-representation-controller.cpp',
    '../common/serialization/vst3/plugin-factory/plugin-factory.cpp',
    '../common/serialization/vst3/attribute-list.cpp',
    '../common/serialization/vst3/base.cpp',
    '../common/serialization/vst3/bstream.cpp',
    '../common/serialization/vst3/component-handler-proxy.cpp',
    '../common/serialization/vst3/connection-point-proxy.cpp',
    '../common/serialization/vst3/context-menu-proxy.cpp',
    '../common/serialization/vst3/context-menu-target.cpp',
    '../common/serialization/vst3/event-list.cpp',
    '../common/serialization/vst3/host-context-proxy.cpp',
    '../common/serialization/vst3/message.cpp',
    '../common/serialization/vst3/param-value-queue.cpp',
    '../common/serialization/vst3/parameter-changes.cpp',
    '../common/serialization/vst3/physical-ui-map-list.cpp',
    '../common/serialization/vst3/plug-frame-proxy.cpp',
    '../common/serialization/vst3/plug-view-proxy.cpp',
    '../common/serialization/vst3/plugin-proxy.cpp',
    '../common/serialization/vst3/plugin-factory-proxy.cpp',
    '../common/serialization/vst3/process-data.cpp',
    '../common/audio-shm.cpp',
    '../common/configuration.cpp',
    '../common/linking.cpp',
    '../common/notifications.cpp',
    '../common/plugins.cpp',
    '../common/process.cpp',
    '../common/utils.cpp',
    '../include/llvm/small-vector.cpp',
    'bridges/vst3.cpp',
    'bridges/vst3-impls/plugin-factory-proxy.cpp',
    'bridges/vst3-impls/plug-view-proxy.cpp',
    'bridges/vst3-impls/plugin-proxy.cpp',
    'host-process.cpp',
    'utils.cpp',
    'vst3-plugin.cpp',
  )
endif
