[package]
name = "yabridgectl"
# This version is linked to yabridge's version for clarity's sake and because
# there's not a lot going on here
version = "2.0.2"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
edition = "2018"
description = "Optional utility to help set up yabridge"
repository = "https://github.com/robbert-vdh/yabridge"
license = "GPL-3.0-or-later"

[dependencies]
aho-corasick = "0.7.13"
anyhow = "1.0.31"
clap = { version = "3.0.0-beta.1", features = ["wrap_help"] }
colored = "2.0.0"
is_executable = "0.1.2"
lazy_static = "1.4.0"
promptly = "0.3.0"
rayon = "1.3.1"
serde = "1.0.114"
serde_derive = "1.0.114"
textwrap = "*"
toml = "0.5.6"
walkdir = "2.3.1"
which = "4.0.1"
xdg = "2.2.0"
