[package]
name = "yabridgectl"
# This version is linked to yabridge's version for clarity's sake and because
# there's not a lot going on here
version = "3.8.1"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
edition = "2021"
description = "Optional utility to help set up yabridge"
repository = "https://github.com/robbert-vdh/yabridge"
license = "GPL-3.0-or-later"

[dependencies]
aho-corasick = "0.7.18"
anyhow = "1.0.52"
clap = { version = "3.0.6", features = ["cargo", "env", "wrap_help"] }
colored = "2.0.0"
is_executable = "1.0.1"
lazy_static = "1.4.0"
promptly = "0.3.0"
# Version 0.1.3 from crates.io assumes a 64-bit toolchain
reflink = { git = "https://github.com/nicokoch/reflink", rev = "e8d93b465f5d9ad340cd052b64bbc77b8ee107e2" }
rayon = "1.5.1"
serde = "1.0.133"
serde_derive = "1.0.133"
# NOTE: textwrap 0.12.0 up to at least 0.13.4 apply the subsequent indent after
#       wrapping
textwrap = { version = "0.11.0", features = ["term_size"] }
toml = "0.5.6"
walkdir = "2.3.1"
which = "4.2.2"
xdg = "2.4.0"
