[package]
name = "yabridgectl"
# This version is linked to yabridge's version for clarity's sake and because
# there's not a lot going on here
version = "5.1.0"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
edition = "2021"
description = "Utility for setting up and managing yabridge"
repository = "https://github.com/robbert-vdh/yabridge"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.52"
clap = { version = "4.3.21", features = ["cargo", "derive", "wrap_help"] }
colored = "2.0.0"
is_executable = "1.0.1"
goblin = { version = "0.6", default-features = false, features = ["std", "pe32", "pe64"] }
libloading = "0.7.3"
promptly = "0.3.1"
# Version 0.1.3 from crates.io assumes a 64-bit toolchain
reflink = { git = "https://github.com/nicokoch/reflink", rev = "e8d93b465f5d9ad340cd052b64bbc77b8ee107e2" }
rayon = "1.5.1"
serde = "1.0.133"
serde_derive = "1.0.133"
serde_jsonrc = "0.1"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
toml = "0.5.6"
walkdir = "2.3.1"
which = "4.2.2"
xdg = "2.4.0"
